--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         function vertodas(){
             alert(document.cookie);
+            window.location.assign("default.html");
         }
 
         function crear(e){
