ultim apunts espero

--- a/Apunts.html
+++ b/Apunts.html
@@ -48,10 +48,17 @@
           <div class="panel">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <ul>
-              <li><a href="C1/Oriol_Camps_Codi_C#_Menu_Palindrom_CamelCase.cs" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
-              <li><a href="C1/Oriol_Camps_Nivell1_Exercici1.cs" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
-              <li><a href="C1/Oriol_Camps_Nivell1_Exercici2.cs" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
-              <li><a href="C1/Oriol_Camps_Nivell1_Exercici3.cs" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
+              <li><a href="C1/Oriol_Camps_Codi_C#_Menu_Palindrom_CamelCase.txt" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell1_Exercici1.txt" rel="noopener" target="_blank">Ejercicio 1 de Nivel 1 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell1_Exercici2.txt" rel="noopener" target="_blank">Ejercicio 2 de Nivel 1 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell1_Exercici3.txt" rel="noopener" target="_blank">Ejercicio 3 de Nivel 1 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell2_Exercici10.txt" rel="noopener" target="_blank">Ejercicio 10 de Nivel 2 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell2_Exercici12.txt" rel="noopener" target="_blank">Ejercicio 12 de Nivel 2 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell2_Exercici13.txt" rel="noopener" target="_blank">Ejercicio 13 de Nivel 2 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell2_Exercici14.txt" rel="noopener" target="_blank">Ejercicio 14 de Nivel 2 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell3_Exercici1.txt" rel="noopener" target="_blank">Ejercicio 1 de Nivel 3 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell3_Exercici2.txt" rel="noopener" target="_blank">Ejercicio 2 de Nivel 3 en C#</a></li>
+              <li><a href="C1/Oriol_Camps_Nivell3_Exercici3.txt" rel="noopener" target="_blank">Ejercicio 3 de Nivel 3 en C#</a></li>
             </ul>
           </div><br/>
 
@@ -60,9 +67,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <ul>
               <li><a href="C2/Oriol_Camps_Exercici_Dracula_HTML.html" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
-              <li><a href="C2/Oriol_Camps_Exercici_3_Javascript.txt" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
-              <li><a href="C2/Oriol_Camps_Exercici_4_Javascript.txt" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
-              <li><a href="C2/Oriol_Camps_Exercici_Potencia_JavaScript.html" rel="noopener" target="_blank">Ejercicio Palindromo/CamelCase</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_3_Javascript.txt" rel="noopener" target="_blank">Ejercicio 3 de lenguaje Javascript</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_4_Javascript.txt" rel="noopener" target="_blank">Ejercicio 4 de lenguaje Javascript</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_Potencia_JavaScript.html" rel="noopener" target="_blank">Ejercicio de Potencia en lenguaje Javascript</a></li>
             </ul>
           </div><br/>
         </div>
