--- a/Apunts.html
+++ b/Apunts.html
@@ -16,7 +16,7 @@
 <body onload="detectCookie()">
     <div id="navegador">
         <ul>
-            <li><a href="Apunts.html">Apunts</a></li>
+            <li><a href="apunts.html">Apunts</a></li>
             <li><a href="Peticion.html">Petición</a></li>
             <li><a href="default.html">Logout</a></li>
         </ul>
