--- a/Signup.html
+++ b/Signup.html
@@ -30,7 +30,7 @@
             <script src="js/Projecte1.js"></script>
 
             <div id="formFooter">
-                <a class="underlineHover" href="default.html">Log in</a>
+                <a class="underlineHover" href="Login.html">Log in</a>
             </div>
         </div>
       </div>
