--- a/Apunts.html
+++ b/Apunts.html
@@ -59,10 +59,11 @@
           <div class="panel">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <ul>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
+              <li><a href="C2/Oriol_Camps_Exercici_1_JavaScript_HTML.html" rel="noopener" target="_blank">Ejercicio 1 de lenguaje Javascript</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_2_JavaScript_HTML.html" rel="noopener" target="_blank">Ejercicio 2 de lenguaje Javascript</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_3_Javascript.txt" rel="noopener" target="_blank">Ejercicio 3 de lenguaje Javascript</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_Potencia_JavaScript.html" rel="noopener" target="_blank">Ejercicio de potencia de lenguaje Javascript</a></li>
+              <li><a href="C2/Oriol_Camps_Exercici_Dracula_HTML.html" rel="noopener" target="_blank">Ejercicio de Drácula de lenguaje Javascript</a></li>
             </ul>
           </div><br/>
         </div>
